--- a/LyncKioskTray/App.xaml
+++ b/LyncKioskTray/App.xaml
@@ -1,4 +1,4 @@
-<Application x:Class="LyncKioskTray.App"
+<Application x:Class="LyncRoomClient.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Application.Resources>
